# perry-clang-plugin

./: CMakeLists.txt  README.md  cmake-config.sh
compiler/: CMakeLists.txt  perry-clang.cpp
include/: PerryClangPlugin.h
lib/: CMakeLists.txt  PerryClangPlugin.cpp
